Add basic operator functions and html structur

--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>New Project</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="calculator">
+      <div class="screen"></div>
+      <div class="numberContainer">
+        <button class="numbers">7</button><button class="numbers">8</button
+        ><button class="numbers">9</button><button class="numbers">4</button
+        ><button class="numbers">5</button><button class="numbers">8</button
+        ><button class="numbers">1</button><button class="numbers">2</button
+        ><button class="numbers">3</button>
+      </div>
+      <div class="operatorContainer">
+        ><button class="operators">X</button
+        ><button class="operators">div</button
+        ><button class="operators">-</button><button class="operators">+</button
+        ><button class="operators">=</button>
+      </div>
+    </div>
+  </body>
 </html>
