--- a/index.html
+++ b/index.html
@@ -12,17 +12,22 @@
     <div class="calculator">
       <div class="screen"></div>
       <div class="numberContainer">
-        <button class="numbers">7</button><button class="numbers">8</button
-        ><button class="numbers">9</button><button class="numbers">4</button
-        ><button class="numbers">5</button><button class="numbers">8</button
-        ><button class="numbers">1</button><button class="numbers">2</button
-        ><button class="numbers">3</button>
+        <button class="numbers" id="7">7</button
+        ><button class="numbers" id="8">8</button
+        ><button class="numbers" id="9">9</button
+        ><button class="numbers" id="4">4</button
+        ><button class="numbers" id="5">5</button
+        ><button class="numbers" id="8">8</button
+        ><button class="numbers" id="1">1</button
+        ><button class="numbers" id="2">2</button
+        ><button class="numbers" id="3">3</button>
       </div>
       <div class="operatorContainer">
-        ><button class="operators">X</button
-        ><button class="operators">div</button
-        ><button class="operators">-</button><button class="operators">+</button
-        ><button class="operators">=</button>
+        <button class="operators" id="multiply">X</button
+        ><button class="operators" id="divide">div</button
+        ><button class="operators" id="subtract">-</button>
+        <button class="operators" id="add">+</button
+        ><button class="operators" id="equal">=</button>
       </div>
     </div>
   </body>
