update calculator screen text positioning

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="screen"></div>
+      <div class="screen">
+        <p class="screenNumber">123</p>
+      </div>
       <div class="numberContainer">
         <button class="numbers" id="7">7</button
         ><button class="numbers" id="8">8</button
