--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="calculator">
       <div class="screen">
-        <p class="screenNumber">123</p>
+        <p class="screenNumber"></p>
       </div>
       <div class="numberContainer">
         <button class="numbers" id="7">7</button
@@ -23,13 +23,15 @@
         ><button class="numbers" id="1">1</button
         ><button class="numbers" id="2">2</button
         ><button class="numbers" id="3">3</button>
+        <button class="numbers" id="0">0</button>
+        <button class="numbers" id=".">.</button>
+        <button class="numbers" id="equal">=</button>
       </div>
       <div class="operatorContainer">
         <button class="operators" id="multiply">X</button
         ><button class="operators" id="divide">div</button
         ><button class="operators" id="subtract">-</button>
-        <button class="operators" id="add">+</button
-        ><button class="operators" id="equal">=</button>
+        <button class="operators" id="add">+</button>
       </div>
     </div>
   </body>
