create functionality for stored number when operator click

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="calculator">
       <div class="screen">
         <p class="screenNumber"></p>
+        <p class="storedNumber"></p>
       </div>
       <div class="numberContainer">
         <button class="numbers" id="7">7</button
