complete project, minimal UI

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button class="numbers" id="equal">=</button>
       </div>
       <div class="operatorContainer">
+        <button class="operators" id="clear">Clear</button>
         <button class="operators" id="multiply">X</button
         ><button class="operators" id="divide">div</button
         ><button class="operators" id="subtract">-</button>
